# cpp_projects

./: .gitmodules  README.md
01_compute_grades/: CMakeLists.txt  example.txt  readme.md
01_compute_grades/src/: line.hpp  main.cpp  utils.hpp
01_compute_grades/tests/: simple.cpp
02_helicopter_game/: .gitignore  build.sh  readme.md
02_helicopter_game/src/: Board.cpp  Frame.cpp  MyApp.cpp  MyMain.cpp  main.cpp
02_helicopter_game/src/include/: Board.hpp  Frame.hpp  Helicopter.hpp  Missile.hpp  MyApp.hpp  MyMain.hpp
03_sequential_bubble_sorting/: CMakeLists.txt  readme.md
03_sequential_bubble_sorting/src/: main.cpp  sort.hpp  utils.hpp
03_sequential_bubble_sorting/test/: sort.cpp
04_parallel_bubble_sorting/: CMakeLists.txt  readme.md
04_parallel_bubble_sorting/src/: main.cpp  sort_common.hpp  sort_versionA.hpp  sort_versionB.hpp  utils.hpp
04_parallel_bubble_sorting/tests/: CMakeLists.txt  versionA_01.cpp  versionB_01.cpp
