
ADD_EXECUTABLE(exe_versionA_01 versionA_01.cpp)
TARGET_LINK_LIBRARIES(exe_versionA_01 ${MPI_LIBRARIES} common)

ADD_EXECUTABLE(exe_versionB_01 versionB_01.cpp)
TARGET_LINK_LIBRARIES(exe_versionB_01 ${MPI_LIBRARIES} common)

ENABLE_TESTING()
ADD_TEST(
    NAME exe_versionA_01
    COMMAND mpiexec -n 4 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/exe_versionA_01)
ADD_TEST(
    NAME exe_versionB_01
    COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/exe_versionB_01)
